src/test/ui/generic-associated-types/issue-71176.stderr
error[E0107]: missing generics for associated type `Provider::A`
  --> $DIR/issue-71176.rs:10:27
   |
LL |   inner: Box<dyn Provider<A = B>>,
   |                           ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-71176.rs:2:10
   |
LL |     type A<'a>;
   |          ^ --
help: add missing lifetime argument
   |
LL |   inner: Box<dyn Provider<A<'a> = B>>,
   |                           ~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
